latest push, after removing unwanted classes